--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-chat-widget": "^2.1.5",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-modal": "^3.11.2",
+    "react-scripts": "3.4.0",
+    "react-select": "^2.0.0-beta.7"
   },
   "scripts": {
     "start": "react-scripts start",
