--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microlink/react": "^5.1.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -12,7 +13,8 @@
     "react-dom": "^16.13.0",
     "react-modal": "^3.11.2",
     "react-scripts": "3.4.0",
-    "react-select": "^2.0.0-beta.7"
+    "react-select": "^2.0.0-beta.7",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
